<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GetGoing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1_normal">walk</string>
    <string name="button2_normal">run</string>
    <string name="button3_normal">ride</string>
    <string name="clock_image">clock</string>
    <string name="speed_image">speed</string>
    <string name="fire_image">fire</string>
    <string name="avg_speed_image">avg_speed</string>
    <string name="road_image">road</string>
    <string name="measure_image">Measure</string>
    <string name="teg_image">Weight</string>
    <string name="age_image">Age</string>
    <string name="date">15.12.2014.</string>
    <string name="time">09:03:48</string>
    <string name="metric_spinner">Metric</string>
    <string name="energyLabel1">Energy:</string>
    <string name="energyLabel2">kcal</string>
    <string name="SettingsActivityTitle" translatable="false">Settings</string>
    <string name="ShowMap" translatable="false">Map</string>
    <string name="action_reset_settings" translatable="false">Reset</string>
    <string name="action_stats" translatable="false">Statistics</string>
    <string name="exploration_mode" translatable="false">Exploration mode</string>
    <string name="walker_text" translatable="false"> Walk</string>
    <string name="runner_text" translatable="false"> Run</string>
    <string name="rider_text" translatable="false"> Ride</string>
    <string name="buttonConfirmSettings" translatable="false"> Accept</string>
    <string name="start" translatable="false"> Start</string>
    <string name="stop" translatable="false"> Stop</string>
    <string name="reset" translatable="false"> Reset</string>
    <string name="setting1" translatable="false"> Measure</string>
    <string name="setting2" translatable="false"> Weight</string>
    <string name="setting3" translatable="false"> Age</string>
    <string name="dialog_set_number" translatable="false">Set</string>
    <string name="dialog_cancel" translatable="false">Cancel</string>
    <string name="dialog_picker_title" translatable="false">Choose a number</string>
    <string name="descImageViewEmpty" translatable="false"> </string>
    <string name="dialog_message" translatable="false">No saved data. Press OK to continue.</string>
    <string name="confirm" translatable="false">OK</string>
    <string name="tag" translatable="false">Activity image</string>
    <string name="energy_spent" translatable="false">Energy spent</string>
    <string name="delete_message" translatable="false">Delete record</string>
    <string name="settings_img_up">Picker up</string>
    <string name="settings_img_down">Picker down</string>
    <string name="settings_btn_accept_description">Accept</string>
    <string name="settings_insert_weight_age">Please insert your weight and age.</string>
    <string-array name="measure_units" translatable="false">
        <item>Metric</item>
        <item>Imperial</item>
        <item>US</item>
    </string-array>
    <string name="alert_dialog_title">Enable devices\'s GPS</string>
    <string name="alert_dialog_message">Turn on your device\'s GPS.</string>
    <string name="alert_dialog_positive_button">Settings</string>
    <string name="alert_dialog_negative_button">Cancel</string>
    <string name="alert_dialog_title_save_btn">Save route</string>
    <string name="alert_dialog_message_save_btn">Your route is successfully saved.</string>
    <string name="alert_dialog_positive_button_save_btn">OK</string>
    <string name="alert_dialog_negative_button_save_btn">Cancel</string>
    <string name="alert_dialog_title_reset_btn">Clear route data</string>
    <string name="alert_dialog_message_reset_btn">Clear map and route data.</string>
    <string name="alert_dialog_positive_reset_save_btn">OK</string>
    <string name="alert_dialog_negative_reset_save_btn">Cancel</string>
    <string name="alert_dialog_title_back_pressed">Leave map</string>
    <string name="alert_dialog_message_back_pressed">All your unsaved data will be lost.</string>
    <string name="alert_dialog_positive_back_pressed">OK</string>
    <string name="alert_dialog_negative_back_pressed">Cancel</string>
    <string name="alert_dialog_empty_title">You don\'t have any saved route yet!</string>
    <string name="notification_title">GetGoing</string>
    <string name="notification_text">Tracking…</string>
    <string name="chart_label_walk">Walk</string>
    <string name="chart_label_run">Run</string>
    <string name="chart_label_ride">Ride</string>
    <string name="my_profile">My profile</string>
    <string name="my_data">MY DATA</string>
    <string name="placeholder_male">Male</string>
    <string name="placeholder_21_year">21 year</string>
    <string name="placeholder_185cm">185cm</string>
    <string name="placeholder_85kg">85kg</string>
    <string name="total_activities">TOTAL ACTIVITIES</string>
    <string name="get_ready">Get ready</string>
    <string name="placeholder_running">Running</string>
    <string name="my_activities">My activities</string>
    <string name="last_exercise">Last exercise</string>
    <string name="view_all">View all</string>
    <string name="choose_your_exercise">Choose your exercise</string>
    <string name="can_we_burn_our_legs">Can we burn our legs?</string>
    <string name="kcal">kcal</string>
    <string name="alert_dialog_no_routes">No routes to display</string>
    <string name="cycling">Bicycling</string>
    <string name="running">Running</string>
    <string name="min">min</string>
    <string name="textview_age_end">" years"</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="progress_bar_img">progress bar image</string>
    <string name="progress_bar_goal_img">progress bar goal icon</string>
    <string name="distance">Distance</string>
    <string name="energy_unit">kcal</string>
    <string name="speed_unit">m/s</string>
    <string name="dist_unit">km</string>
    <string name="toggle_map_button">Toggle map button</string>
    <string name="goal">Goal</string>
    <string name="alert_dialog_delete_route">Delete permanently this route?</string>
    <string name="route_deleted_msg">Route deleted</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="totalkm_0km">0km</string>
    <string name="totalkcal_0kcal">0kcal</string>
    <string name="walking">Walking</string>
    <string name="duration">Duration</string>
    <string name="speed">Speed</string>
    <string name="calories">Calories</string>
    <string name="set_goal_exercise">Set goal for this exercise</string>
    <string name="dialog_hint">0000</string>
    <string name="back_button">Back button</string>
    <string name="background_drawable_for_a_button">Background drawable for a button</string>
    <string name="button">Button</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="save_exercise">Save exercise</string>
    <string name="reset_progress">Reset progress</string>
    <string name="logo">Logo</string>
    <string name="profile_icon">Profile icon</string>
    <string name="_0_years">0 years</string>
    <string name="initval_0_cm">0 cm</string>
    <string name="initval_0kg">0 kg</string>
    <string name="activity_walking">Walking</string>
    <string name="activity_running">Running</string>
    <string name="activity_cycling">Cycling</string>
    <string name="title_activity_show_data">ShowData</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="card_icon_for_recycler">card icon for recycler</string>
    <string name="image_to_show_the_type_of_activity">image to show the type of activity</string>
</resources>


