<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="clickHandler"
            type="com.hyperether.getgoing_kmp.android.ui.handler.LocationActivityClickHandler" />

        <variable
            name="locationViewModel"
            type="com.hyperether.getgoing_kmp.android.ui.handler.LocationActivityClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background_new">

        <ImageButton
            android:id="@+id/ib_al_backbutton"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:onClick="@{clickHandler::onBackPressed}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_light_back_icon" />

        <TextView
            android:id="@+id/tv_al_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{locationViewModel.mTitle}"
            android:textColor="@color/mat_gray"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_al_backbutton"
            app:layout_constraintStart_toEndOf="@+id/ib_al_backbutton"
            app:layout_constraintTop_toTopOf="@+id/ib_al_backbutton" />

        <fragment
            android:id="@+id/mapView"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_al_backbutton"></fragment>


        <com.hyperether.getgoing_kmp.android.ui.dynamicview.CurvedBottomView
            android:id="@+id/al_customBottomBar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </com.hyperether.getgoing_kmp.android.ui.dynamicview.CurvedBottomView>

        <ImageView
            android:id="@+id/iv_al_circletransparent"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="140dp"
            android:contentDescription="@string/background_drawable_for_a_button"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@+id/al_customBottomBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/al_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/button"
            android:elevation="1dp"
            android:src="@drawable/ic_circle_white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_al_circletransparent"
            app:layout_constraintEnd_toEndOf="@+id/iv_al_circletransparent"
            app:layout_constraintStart_toStartOf="@+id/iv_al_circletransparent"
            app:layout_constraintTop_toTopOf="@+id/iv_al_circletransparent" />

        <ImageView
            android:id="@+id/al_btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/start_tracking"
            android:elevation="2dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/al_button"
            app:layout_constraintEnd_toEndOf="@id/al_button"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="@id/al_button"
            app:layout_constraintTop_toTopOf="@id/al_button"
            app:srcCompat="@drawable/ic_light_start_icon" />

        <ImageView
            android:id="@+id/al_btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/stop_tracking"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/al_button"
            app:layout_constraintEnd_toEndOf="@id/al_button"
            app:layout_constraintStart_toStartOf="@id/al_button"
            app:layout_constraintTop_toTopOf="@id/al_button"
            app:srcCompat="@drawable/ic_light_stop_icon" />

        <Chronometer
            android:id="@+id/chr_al_meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:format="0.00m"
            android:textColor="@color/mat_gray"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/al_customBottomBar" />

        <Chronometer
            android:id="@+id/chr_al_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:format="0.00m/s"
            android:textColor="@color/mat_gray"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chr_al_meters" />

        <Chronometer
            android:id="@+id/chr_al_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/mat_gray"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/chr_al_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chr_al_meters" />

        <Chronometer
            android:id="@+id/chr_al_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:format="0,00kcal"
            android:textColor="@color/mat_gray"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/chr_al_speed"
            app:layout_constraintTop_toBottomOf="@id/chr_al_meters" />

        <TextView
            android:id="@+id/tv_al_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/speed"
            android:textColor="@color/mat_gray"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/chr_al_speed"
            app:layout_constraintEnd_toEndOf="@id/chr_al_speed"
            app:layout_constraintStart_toStartOf="@id/chr_al_speed"
            app:layout_constraintTop_toBottomOf="@id/chr_al_meters" />

        <TextView
            android:id="@+id/tv_al_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/duration"
            android:textColor="@color/mat_gray"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/chr_al_duration"
            app:layout_constraintEnd_toEndOf="@id/chr_al_duration"
            app:layout_constraintStart_toStartOf="@id/chr_al_duration"
            app:layout_constraintTop_toBottomOf="@id/chr_al_meters" />

        <TextView
            android:id="@+id/tv_al_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/calories"
            android:textColor="@color/mat_gray"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/chr_al_kcal"
            app:layout_constraintEnd_toEndOf="@id/chr_al_kcal"
            app:layout_constraintStart_toStartOf="@id/chr_al_kcal"
            app:layout_constraintTop_toBottomOf="@id/chr_al_meters" />

        <ImageButton
            android:id="@+id/ib_al_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save_exercise"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/tv_al_duration"
            app:layout_constraintStart_toStartOf="@id/tv_al_duration"
            app:layout_constraintTop_toTopOf="@id/al_customBottomBar"
            app:srcCompat="@drawable/ic_light_save_icon" />

        <ImageButton
            android:id="@+id/ib_al_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/reset_progress"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/tv_al_kcal"
            app:layout_constraintStart_toStartOf="@id/tv_al_kcal"
            app:layout_constraintTop_toTopOf="@id/al_customBottomBar"
            app:srcCompat="@drawable/ic_light_replay_icon" />

        <Button
            android:id="@+id/al_btn_setgoal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:text="@string/set_goal_exercise"
            android:textAllCaps="false"
            android:textColor="@color/light_theme_accent"
            android:textSize="22sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/al_customBottomBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/al_customBottomBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>