<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="lastRoute"
            type="com.hyperether.getgoing_kmp.repository.room.Route" />

        <variable
            name="clickHandler"
            type="com.hyperether.getgoing_kmp.android.ui.handler.MainActivityClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background_new">

        <ImageView
            android:id="@+id/iv_am_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_small" />

        <ImageButton
            android:id="@+id/ib_am_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile_icon"
            android:onClick="@{clickHandler::onProfileClick}"
            app:layout_constraintBottom_toBottomOf="@+id/iv_am_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_am_logo"
            app:srcCompat="@drawable/ic_light_user_icon" />

        <TextView
            android:id="@+id/tv_am_lastexercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="8dp"
            android:text="@string/last_exercise"
            android:textColor="@color/mat_gray"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_am_logo" />

        <ImageButton
            android:id="@+id/iv_am_arrow2actfrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:onClick="@{clickHandler::onActivitiesClick}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_am_viewall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_am_viewall"
            app:srcCompat="@drawable/ic_light_chevron_icon" />

        <TextView
            android:id="@+id/tv_am_viewall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:onClick="@{clickHandler::onActivitiesClick}"
            android:text="@string/view_all"
            android:textColor="@color/light_theme_accent"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_am_lastexercise"
            app:layout_constraintEnd_toStartOf="@+id/iv_am_arrow2actfrag"
            app:layout_constraintTop_toTopOf="@+id/tv_am_lastexercise" />

        <TextView
            android:id="@+id/tv_am_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/choose_your_exercise"
            android:textColor="@color/mat_gray"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_am_burn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_am_burn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/can_we_burn_our_legs"
            android:textColor="@color/light_theme_accent"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" />

        <com.hyperether.getgoing_kmp.android.ui.dynamicview.CurvedBottomView
            android:id="@+id/customBottomBar"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_am_bluerectangle"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_am_lastexercise"
            app:srcCompat="@drawable/ic_blue_rectangle_custom" />

        <ImageView
            android:id="@+id/iv_am_circletransparent"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="130dp"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@+id/customBottomBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="5dp"
            android:src="@drawable/ic_circle_white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_am_circletransparent"
            app:layout_constraintEnd_toEndOf="@+id/iv_am_circletransparent"
            app:layout_constraintStart_toStartOf="@+id/iv_am_circletransparent"
            app:layout_constraintTop_toTopOf="@+id/iv_am_circletransparent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/customBottomBar"
            app:layout_constraintStart_toStartOf="@+id/customBottomBar"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <com.dinuscxj.progressbar.CircleProgressBar
            android:id="@+id/cpb_am_kmgoal"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_am_bluerectangle"
            app:layout_constraintStart_toStartOf="@+id/iv_am_bluerectangle"
            app:layout_constraintTop_toTopOf="@+id/iv_am_bluerectangle"
            app:layout_constraintVertical_bias="0.478"
            app:progress_background_color="#9fffffff"
            app:progress_end_color="@android:color/white"
            app:progress_shader="sweep"
            app:progress_start_color="@android:color/white"
            app:progress_stroke_width="5dp"
            app:progress_text_color="@android:color/white"
            app:progress_text_size="18sp"
            app:style="solid_line" />

        <com.dinuscxj.progressbar.CircleProgressBar
            android:id="@+id/cpb_am_kmgoal2"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_am_bluerectangle"
            app:layout_constraintEnd_toEndOf="@+id/iv_am_bluerectangle"
            app:layout_constraintTop_toTopOf="@+id/iv_am_bluerectangle"
            app:layout_constraintVertical_bias="0.478"
            app:progress_background_color="#9fffffff"
            app:progress_end_color="#9fffffff"
            app:progress_start_color="#9fffffff"
            app:progress_stroke_width="5dp"
            app:progress_text_color="@android:color/white"
            app:progress_text_size="18sp"
            app:style="solid_line" />


        <TextView
            android:id="@+id/tv_am_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="48dp"
            android:text="@string/kcal"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_am_kcalval"
            app:layout_constraintEnd_toStartOf="@+id/cpb_am_kmgoal"
            app:layout_constraintStart_toEndOf="@+id/cpb_am_kmgoal"
            app:layout_constraintTop_toBottomOf="@+id/tv_am_kcalval" />

        <TextView
            android:id="@+id/tv_am_kcalval"
            displayKcal="@{lastRoute.energy}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:flow_horizontalBias="0.5"
            app:layout_constraintBottom_toBottomOf="@+id/iv_am_bluerectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_am_bluerectangle" />

        <TextView
            android:id="@+id/tv_am_progbar_act"
            progress_activity_name="@{lastRoute.activity_id}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/running"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/cpb_am_kmgoal"
            app:layout_constraintStart_toStartOf="@+id/cpb_am_kmgoal"
            app:layout_constraintTop_toBottomOf="@+id/iv_am_activity" />

        <TextView
            android:id="@+id/tv_am_progbar_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/min"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/cpb_am_kmgoal2"
            app:layout_constraintStart_toStartOf="@+id/cpb_am_kmgoal2"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/iv_am_activity"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="17dp"
            app:layout_constraintEnd_toEndOf="@+id/cpb_am_kmgoal"
            app:layout_constraintStart_toStartOf="@+id/cpb_am_kmgoal"
            app:layout_constraintTop_toTopOf="@+id/cpb_am_kmgoal"
            app:srcCompat="@drawable/ic_light_running_icon_white" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="17dp"
            app:layout_constraintEnd_toEndOf="@+id/cpb_am_kmgoal2"
            app:layout_constraintStart_toStartOf="@+id/cpb_am_kmgoal2"
            app:layout_constraintTop_toTopOf="@+id/cpb_am_kmgoal2"
            app:srcCompat="@drawable/ic_timer_icon" />

        <Button
            android:id="@+id/materialButton"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_button_layout"
            android:text="@string/get_ready"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_ma_mainact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="15dp"
            android:text="@string/placeholder_running"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/materialButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>